Gtk-3.20&3.22: [GtkMessageDialog] Fix invisible check/radio

--- a/gtk-3.22/_common.scss
+++ b/gtk-3.22/_common.scss
@@ -4125,6 +4125,29 @@ messagedialog { // Message Dialog styling
     box-shadow: none;
   }
 
+  @each $s,$as in ('','-unchecked'),
+                  (':hover', '-unchecked-active'),
+                  (':active', '-unchecked-active'),
+                  (':disabled','-unchecked-insensitive'),
+                  (':indeterminate', '-mixed'),
+                  (':indeterminate:hover', '-mixed-active'),
+                  (':indeterminate:active', '-mixed-active'),
+                  (':indeterminate:disabled', '-mixed-insensitive'),
+                  (':checked', '-checked'),
+                  (':checked:hover', '-checked-active'),
+                  (':checked:active', '-checked-active'),
+                  (':checked:disabled','-checked-insensitive') {
+    check#{$s} { // always use dark variant
+      -gtk-icon-source: -gtk-scaled(url("assets/checkbox#{$as}-dark.png"),
+                                    url("assets/checkbox#{$as}-dark@2.png"));
+    }
+
+    radio#{$s} {
+      -gtk-icon-source: -gtk-scaled(url("assets/radio#{$as}-dark.png"),
+                                    url("assets/radio#{$as}-dark@2.png"));
+    }
+  }
+
   checkbutton.text-button,
   radiobutton.text-button {
     color: $inverted_secondary_fg_color;
